implement HttpOnly refresh-cookie
